--- a/ProprtiesFile/data.properties
+++ b/ProprtiesFile/data.properties
@@ -1,2 +1,8 @@
 browser:chrome
-url:https://www.calculator.net/
+#url:https://staging-accounts.outplayhq.com/login
+#username:salesforcetest@martinz.co.in
+#pwd:Suresh123$
+url:https://www.amazon.in/
+username:ashwini.bailmare98@gmail.com
+pwd:Besc@1997
+searchvalue:Mobiles
