--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>Calculator</groupId>
-	<artifactId>Calculator_Spurqlabs</artifactId>
+	<groupId>flipkart</groupId>
+	<artifactId>flipkart</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>SalesForce</name>
+	<name>flipkart</name>
 	<url>http://maven.apache.org</url>
 
 
@@ -74,7 +74,7 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
-			<version>2.14.1</version>
+			<version>2.8.2</version>
 		</dependency>
 
 		<dependency>
